--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Favicons_Alfaiz -->
+  <link rel="icon" type="image/png" href="./assets/img/Alfaiz_Logo/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="./assets/img/Alfaiz_Logo/favicon.svg" />
+<link rel="shortcut icon" href="./assets/img/Alfaiz_Logo/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="./assets/img/Alfaiz_Logo/apple-touch-icon.png" />
+<link rel="manifest" href="./assets/img/Alfaiz_Logo/site.webmanifest" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
